<resources>
    <string name="app_name">NotificationJobScheduler</string>
    <string name="network_setting">網路連線方式</string>
    <string name="network_default">Default</string>
    <string name="network_any">Any</string>
    <string name="network_wifi">Wifi</string>
    <string name="require_setting">要求</string>
    <string name="charge_enable">電量顯示</string>
    <string name="volume_setting">音量調整</string>
    <string name="cancel_button">取消設定</string>
    <string name="correct_button">開始設定</string>
    <string name="start_all_job">開始所有工作</string>
    <string name="cancel_all_job">取消所有工作</string>
</resources>
